fixed rebasing conflicts and adjusted proto to compile again